# ogmen_ws

./: README.md
install/: local_setup.sh  setup.sh
install/bot_description/share/bot_description/: package.sh
install/bot_description/share/bot_description/cmake/: bot_descriptionConfig.cmake
install/bot_description/share/bot_description/launch/: control.launch.py  rviz.launch.py  spawn.launch.py
install/bot_description/share/bot_description/urdf/: robot.urdf.xacro  robot.xacro
log/: latest_build
src/bot_description/: CMakeLists.txt  package.xml
src/bot_description/launch/: spawn.launch.py
src/bot_description/urdf/: robot.urdf.xacro
src/bot_description/worlds/: test.world
